# detection_project

./: readme.md
backend/: Cargo.toml  Cargo.toml.backup
backend/migrations/: init.sql
backend/src/: auth.rs  database.rs  main.rs  security.rs
detection/: detection.py  requirements.txt
frontend/: history.html  index.html  login.html  scripts.js  styles.css
