[package]
name = "detection_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web Axum
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Sérialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilitaires
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"

# Pour le traitement d'images (optionnel, pour l'avenir)
# image = "0.24"
# base64 = "0.21"

# Pour l'intégration de modèles ML (optionnel)
# candle-core = "0.3"
# candle-nn = "0.3"
# tch = "0.13"  # PyTorch bindings